# edtech-tasks

./: README.md  pyproject.toml
task1/: solution1.py  test_solution1.py
task2/: beasts.csv  solution2.py  test_solution2.py
task3/: solution3.py  task3.md  test_solution3.py
